src/OpenCvSharpExtern/imgproc.h

CVAPI(ExceptionStatus) imgproc_getGaussianKernel(
    int ksize,
    double sigma,
    int ktype,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = cv::getGaussianKernel(ksize, sigma, ktype);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_getDerivKernels(
    const interop::OutputArrayProxy* kx,
    const interop::OutputArrayProxy* ky,
    int dx,
    int dy,
    int ksize,
    int normalize,
    int ktype)
{
    return cvTry([&] {
        cv::getDerivKernels(OutProxy(*kx), OutProxy(*ky), dx, dy, ksize, normalize != 0, ktype);
    });
}
CVAPI(ExceptionStatus) imgproc_getGaborKernel(
    interop::Size ksize,
    double sigma,
    double theta,
    double lambd,
    double gamma,
    double psi,
    int ktype,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = cv::getGaborKernel(cpp(ksize), sigma, theta, lambd, gamma, psi, ktype);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_getStructuringElement(
    int shape,
    interop::Size ksize,
    interop::Point anchor,
    cv::Mat **returnValue)
{
    return cvTry([&] {
    const auto ret = cv::getStructuringElement(shape, cpp(ksize), cpp(anchor));
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_medianBlur(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ksize)
{
    return cvTry([&] {
        cv::medianBlur(InProxy(*src), OutProxy(*dst), ksize);
    });
}
CVAPI(ExceptionStatus) imgproc_GaussianBlur(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    interop::Size ksize,
    double sigmaX,
    double sigmaY,
    int borderType,
    int hint)
{
    return cvTry([&] {
        cv::GaussianBlur(InProxy(*src), OutProxy(*dst), cpp(ksize), sigmaX, sigmaY, borderType, static_cast<cv::AlgorithmHint>(hint));
    });
}
CVAPI(ExceptionStatus) imgproc_bilateralFilter(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int d,
    double sigmaColor,
    double sigmaSpace,
    int borderType)
{
    return cvTry([&] {
        cv::bilateralFilter(InProxy(*src), OutProxy(*dst), d, sigmaColor, sigmaSpace, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_boxFilter(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ddepth,
    interop::Size ksize,
    interop::Point anchor,
    int normalize,
    int borderType)
{
    return cvTry([&] {
        cv::boxFilter(InProxy(*src), OutProxy(*dst), ddepth, cpp(ksize), cpp(anchor), normalize != 0, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_blur(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    interop::Size ksize,
    interop::Point anchor,
    int borderType)
{
    return cvTry([&] {
        cv::blur(InProxy(*src), OutProxy(*dst), cpp(ksize), cpp(anchor), borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_filter2D(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ddepth,
    const interop::InputArrayProxy* kernel,
    interop::Point anchor,
    double delta,
    int borderType)
{
    return cvTry([&] {
        cv::filter2D(InProxy(*src), OutProxy(*dst), ddepth, InProxy(*kernel), cpp(anchor), delta, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_sepFilter2D(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ddepth,
    const interop::InputArrayProxy* kernelX,
    const interop::InputArrayProxy* kernelY,
    interop::Point anchor,
    double delta,
    int borderType)
{
    return cvTry([&] {
        cv::sepFilter2D(InProxy(*src), OutProxy(*dst), ddepth, InProxy(*kernelX), InProxy(*kernelY), cpp(anchor), delta, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_Sobel(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ddepth,
    int dx,
    int dy,
    int ksize,
    double scale,
    double delta,
    int borderType)
{
    return cvTry([&] {
        cv::Sobel(InProxy(*src), OutProxy(*dst), ddepth, dx, dy, ksize, scale, delta, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_Scharr(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ddepth,
    int dx,
    int dy,
    double scale,
    double delta,
    int borderType)
{
    return cvTry([&] {
        cv::Scharr(InProxy(*src), OutProxy(*dst), ddepth, dx, dy, scale, delta, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_Laplacian(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ddepth,
    int ksize,
    double scale,
    double delta,
    int borderType)
{
    return cvTry([&] {
        cv::Laplacian(InProxy(*src), OutProxy(*dst), ddepth, ksize, scale, delta, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_cornerEigenValsAndVecs(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int blockSize,
    int ksize,
    int borderType)
{
    return cvTry([&] {
        cv::cornerEigenValsAndVecs(InProxy(*src), OutProxy(*dst), blockSize, ksize, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_preCornerDetect(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int ksize,
    int borderType)
{
    return cvTry([&] {
        cv::preCornerDetect(InProxy(*src), OutProxy(*dst), ksize, borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_cornerSubPix(
    const interop::InputArrayProxy* image,
    std::vector<cv::Point2f> *corners,
    interop::Size winSize,
    interop::Size zeroZone,
    interop::TermCriteria criteria)
{
    return cvTry([&] {
        cv::cornerSubPix(InProxy(*image), *corners, cpp(winSize), cpp(zeroZone), cpp(criteria));
    });
}
CVAPI(ExceptionStatus) imgproc_goodFeaturesToTrack(
    const interop::InputArrayProxy* src,
    std::vector<cv::Point2f> *corners,
    int maxCorners,
    double qualityLevel,
    double minDistance,
    const interop::InputArrayProxy* mask,
    int blockSize,
    int useHarrisDetector,
    double k)
{
    return cvTry([&] {
        cv::goodFeaturesToTrack(InProxy(*src), *corners, maxCorners, qualityLevel, minDistance, 
            InProxy(*mask), blockSize, useHarrisDetector != 0, k);
    });
}
CVAPI(ExceptionStatus) imgproc_HoughLines(
    const interop::InputArrayProxy* src,
    std::vector<cv::Vec2f> *lines,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn)
{
    return cvTry([&] {
        cv::HoughLines(InProxy(*src), *lines, rho, theta, threshold, srn, stn);
    });
}
CVAPI(ExceptionStatus) imgproc_HoughLinesP(
    const interop::InputArrayProxy* src,
    std::vector<cv::Vec4i> *lines,
    double rho,
    double theta,
    int threshold,
    double minLineLength,
    double maxLineGap)
{
    return cvTry([&] {
        cv::HoughLinesP(InProxy(*src), *lines, rho, theta, threshold, minLineLength, maxLineGap);
    });
}
CVAPI(ExceptionStatus) imgproc_HoughCircles(
    const interop::InputArrayProxy* src,
    std::vector<cv::Vec3f> *circles,
    int method,
    double dp,
    double minDist,
    double param1,
    double param2,
    int minRadius,
    int maxRadius)
{
    return cvTry([&] {
        cv::HoughCircles(InProxy(*src), *circles, method, dp, minDist, param1, param2, minRadius, maxRadius);
    });
}
CVAPI(ExceptionStatus) imgproc_erode(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    const interop::InputArrayProxy* kernel,
    interop::Point anchor,
    int iterations,
    int borderType,
    interop::Scalar borderValue)
{
    return cvTry([&] {
        cv::erode(InProxy(*src), OutProxy(*dst), InProxy(*kernel), cpp(anchor), iterations, borderType, cpp(borderValue));
    });
}
CVAPI(ExceptionStatus) imgproc_dilate(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    const interop::InputArrayProxy* kernel,
    interop::Point anchor,
    int iterations,
    int borderType,
    interop::Scalar borderValue)
{
    return cvTry([&] {
        cv::dilate(InProxy(*src), OutProxy(*dst), InProxy(*kernel), cpp(anchor), iterations, borderType, cpp(borderValue));
    });
}
CVAPI(ExceptionStatus) imgproc_morphologyEx(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int op,
    const interop::InputArrayProxy* kernel,
    interop::Point anchor,
    int iterations,
    int borderType,
    interop::Scalar borderValue)
{
    return cvTry([&] {
        cv::morphologyEx(InProxy(*src), OutProxy(*dst), op, InProxy(*kernel), cpp(anchor), iterations, borderType, cpp(borderValue));
    });
}
CVAPI(ExceptionStatus) imgproc_resize(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    interop::Size dsize,
    double fx,
    double fy,
    int interpolation)
{
    return cvTry([&] {
        cv::resize(InProxy(*src), OutProxy(*dst), cpp(dsize), fx, fy, interpolation);
    });
}
CVAPI(ExceptionStatus) imgproc_warpAffine(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    const interop::InputArrayProxy* M,
    interop::Size dsize,
    int flags,
    int borderMode,
    interop::Scalar borderValue,
    int hint)
{
    return cvTry([&] {
        cv::warpAffine(InProxy(*src), OutProxy(*dst), InProxy(*M), cpp(dsize), flags, borderMode, cpp(borderValue), static_cast<cv::AlgorithmHint>(hint));
    });
}
CVAPI(ExceptionStatus) imgproc_warpPerspective_MisInputArray(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    const interop::InputArrayProxy* m,
    interop::Size dsize,
    int flags,
    int borderMode,
    interop::Scalar borderValue,
    int hint)
{
    return cvTry([&] {
        cv::warpPerspective(InProxy(*src), OutProxy(*dst), InProxy(*m), cpp(dsize), flags, borderMode, cpp(borderValue), static_cast<cv::AlgorithmHint>(hint));
    });
}
CVAPI(ExceptionStatus) imgproc_warpPerspective_MisArray(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    float* m,
    int mRow,
    int mCol,
    interop::Size dsize,
    int flags,
    int borderMode,
    interop::Scalar borderValue,
    int hint)
{
    return cvTry([&] {
        const cv::Mat mmat(mRow, mCol, CV_32FC1, m);
        cv::warpPerspective(InProxy(*src), OutProxy(*dst), mmat, cpp(dsize), flags, borderMode, cpp(borderValue), static_cast<cv::AlgorithmHint>(hint));
    });
}
CVAPI(ExceptionStatus) imgproc_remap(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    const interop::InputArrayProxy* map1,
    const interop::InputArrayProxy* map2,
    int interpolation,
    int borderMode,
    interop::Scalar borderValue,
    int hint)
{
    return cvTry([&] {
        cv::remap(InProxy(*src), OutProxy(*dst), InProxy(*map1), InProxy(*map2), interpolation, borderMode, cpp(borderValue), static_cast<cv::AlgorithmHint>(hint));
    });
}
CVAPI(ExceptionStatus) imgproc_convertMaps(
    const interop::InputArrayProxy* map1,
    const interop::InputArrayProxy* map2,
    const interop::OutputArrayProxy* dstmap1,
    const interop::OutputArrayProxy* dstmap2,
    int dstmap1type,
    int nnInterpolation)
{
    return cvTry([&] {
        cv::convertMaps(InProxy(*map1), InProxy(*map2), OutProxy(*dstmap1), OutProxy(*dstmap2), dstmap1type, nnInterpolation != 0);
    });
}
CVAPI(ExceptionStatus) imgproc_getRotationMatrix2D(
    interop::Point2f center,
    double angle,
    double scale,
    cv::Mat** returnValue)
{
    return cvTry([&] {
    const auto ret = cv::getRotationMatrix2D(cpp(center), angle, scale);
    *returnValue = new cv::Mat(ret);
    });

}
CVAPI(ExceptionStatus) imgproc_invertAffineTransform(const interop::InputArrayProxy* M, const interop::OutputArrayProxy* iM)
{
    return cvTry([&] {
        cv::invertAffineTransform(InProxy(*M), OutProxy(*iM));
    });
}
CVAPI(ExceptionStatus) imgproc_getPerspectiveTransform1(
    cv::Point2f *src,
    cv::Point2f *dst,
    cv::Mat** returnValue)
{
    return cvTry([&] {
    const auto ret = cv::getPerspectiveTransform(src, dst);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_getPerspectiveTransform2(
    const interop::InputArrayProxy* src,
    const interop::InputArrayProxy* dst,
    cv::Mat** returnValue)
{
    return cvTry([&] {
        const auto ret = cv::getPerspectiveTransform(InProxy(*src), InProxy(*dst));
        *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_getAffineTransform1(
    cv::Point2f *src,
    cv::Point2f *dst,
    cv::Mat** returnValue)
{
    return cvTry([&] {
    const auto ret = cv::getAffineTransform(src, dst);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_getAffineTransform2(
    const interop::InputArrayProxy* src,
    const interop::InputArrayProxy* dst,
    cv::Mat** returnValue)
{
    return cvTry([&] {
        const auto ret = cv::getAffineTransform(InProxy(*src), InProxy(*dst));
        *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) imgproc_getRectSubPix(
    const interop::InputArrayProxy* image,
    interop::Size patchSize,
    interop::Point2f center,
    const interop::OutputArrayProxy* patch,
    int patchType)
{
    return cvTry([&] {
        cv::getRectSubPix(InProxy(*image), cpp(patchSize), cpp(center), OutProxy(*patch), patchType);
    });
}